--- a/charts/integrify-minikube/templates/config-processor-deployment.yaml
+++ b/charts/integrify-minikube/templates/config-processor-deployment.yaml
@@ -22,7 +22,7 @@ spec:
               name: integrify-secrets
           env:
           {{- toYaml .Values.globalEnv | nindent 10 }}
-          image: "{{ .Values.image.repo }}/{{ .Values.configProcessor.repoName }}:72e336d"
+          image: "{{ .Values.image.repo }}/{{ .Values.configProcessor.repoName }}:{{ .Values.release }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.configProcessor.name }}
           volumeMounts:
