--- a/charts/integrify-minikube/templates/settings-deployment.yaml
+++ b/charts/integrify-minikube/templates/settings-deployment.yaml
@@ -22,7 +22,7 @@ spec:
               name: integrify-secrets
           env:
           {{- toYaml .Values.globalEnv | nindent 10 }}
-          image: "{{ .Values.image.repo }}/{{ .Values.settings.repoName }}:b9bfeae"
+          image: "{{ .Values.image.repo }}/{{ .Values.settings.repoName }}:{{ .Values.release }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.settings.name }}
           ports:
