default image tag to appVErsion from Chart.yaml if no release value is specified in the values.yaml file

--- a/charts/integrify-minikube/templates/auth-deployment.yaml
+++ b/charts/integrify-minikube/templates/auth-deployment.yaml
@@ -23,7 +23,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo }}/{{ .Values.auth.repoName }}:{{ .Values.release }}"
+          image: "{{ .Values.image.repo }}/{{ .Values.auth.repoName }}:{{ .Values.release | default (printf "v%s" .Chart.AppVersion) }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.auth.port }}
