--- a/charts/integrify-minikube/templates/files-deployment.yaml
+++ b/charts/integrify-minikube/templates/files-deployment.yaml
@@ -24,7 +24,7 @@ spec:
           env:
           {{- toYaml .Values.globalEnv | nindent 10 }}
           {{- toYaml .Values.files.env | nindent 10 }}
-          image: "{{ .Values.image.repo }}/{{ .Values.files.repoName }}:{{ .Values.release }}"
+          image: "{{ .Values.image.repo }}/{{ .Values.files.repoName }}::{{ .Values.release | default (printf "v%s" .Chart.AppVersion) }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.files.name }}
           ports:
