--- a/charts/integrify-minikube/templates/core-service-deployment.yaml
+++ b/charts/integrify-minikube/templates/core-service-deployment.yaml
@@ -24,7 +24,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo }}/{{ .Values.coreService.repoName }}::{{ .Values.release | default (printf "v%s" .Chart.AppVersion) }}"
+          image: "{{ .Values.image.repo }}/{{ .Values.coreService.repoName }}::{{ .Values.release | default  .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
           - containerPort: {{ .Values.coreService.port }}
