--- a/charts/integrify-minikube/templates/scheduler-deployment.yaml
+++ b/charts/integrify-minikube/templates/scheduler-deployment.yaml
@@ -22,7 +22,7 @@ spec:
               name: integrify-secrets
           env:
           {{- toYaml .Values.globalEnv | nindent 10 }}
-          image: "{{ .Values.image.repo }}/{{ .Values.scheduler.repoName }}::{{ .Values.release | default (printf "v%s" .Chart.AppVersion) }}"
+          image: "{{ .Values.image.repo }}/{{ .Values.scheduler.repoName }}::{{ .Values.release | default  .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.scheduler.name }}
           volumeMounts:
