--- a/charts/integrify-eks/templates/processes-deployment.yaml
+++ b/charts/integrify-eks/templates/processes-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo }}/{{ .Values.processes.repoName }}:222e3f2"
+          image: "{{ .Values.image.repo }}/{{ .Values.processes.repoName }}:{{ .Values.release | default  .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.processes.name }}
           ports:
