--- a/charts/integrify-eks/templates/scheduler-deployment.yaml
+++ b/charts/integrify-eks/templates/scheduler-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo }}/{{ .Values.scheduler.repoName }}:65130f3"
+          image: "{{ .Values.image.repo }}/{{ .Values.scheduler.repoName }}:{{ .Values.release | default  .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.scheduler.name }}
           resources:
