--- a/charts/integrify-eks/templates/auth-deployment.yaml
+++ b/charts/integrify-eks/templates/auth-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo }}/{{ .Values.auth.repoName }}:993dadc"
+          image: "{{ .Values.image.repo }}/{{ .Values.auth.repoName }}:{{ .Values.release | default  .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.auth.name }}
           ports:
