--- a/charts/integrify-eks/templates/client-deployment.yaml
+++ b/charts/integrify-eks/templates/client-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo }}/{{ .Values.client.repoName }}:744d429"
+          image: "{{ .Values.image.repo }}/{{ .Values.client.repoName }}:{{ .Values.release | default  .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.client.name }}
           ports:
