--- a/charts/integrify-eks/templates/reports-deployment.yaml
+++ b/charts/integrify-eks/templates/reports-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo }}/{{ .Values.reports.repoName }}:3a6c1e3"
+          image: "{{ .Values.image.repo }}/{{ .Values.reports.repoName }}:{{ .Values.release | default  .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.reports.name }}
           ports:
