--- a/charts/integrify-eks/templates/session-processor-deployment.yaml
+++ b/charts/integrify-eks/templates/session-processor-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo }}/{{ .Values.sessionProcessor.repoName}}:c85bb13"
+          image: "{{ .Values.image.repo }}/{{ .Values.sessionProcessor.repoName}}:{{ .Values.release | default  .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.sessionProcessor.name }}
           resources:
