--- a/charts/integrify-eks/templates/settings-deployment.yaml
+++ b/charts/integrify-eks/templates/settings-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo }}/{{ .Values.settings.repoName }}:b9bfeae"
+          image: "{{ .Values.image.repo }}/{{ .Values.settings.repoName }}:{{ .Values.release | default  .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.settings.name }}
           ports:
