--- a/charts/integrify-eks/templates/task-processor-deployment.yaml
+++ b/charts/integrify-eks/templates/task-processor-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo }}/{{ .Values.taskProcessor.repoName }}:e511d1c"
+          image: "{{ .Values.image.repo }}/{{ .Values.taskProcessor.repoName }}:{{ .Values.release | default  .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.taskProcessor.name }}
           resources:
