--- a/values-eks.yaml
+++ b/values-eks.yaml
@@ -15,15 +15,22 @@ globalEnv:
     value: text
   - name:  ENV_PLATFORM
     value: kubernetes
+  - name: PORT
+    value: "3555"
 
 secrets:
   awsCreds: {"accessKeyId": "YOUR_ACCESS_KEY_ID", "secretAccessKey": "YOUR_SECRET_ACCESS_KEY", "region": "us-east-1"} # Example key. You should replace with your own AWS creds.
   integrifyEnvToken: 12345678-1234-1234-1234-123456789ABC # Example key. You should replace with your own ENV key.
-  redisConn: {"host":"redis.yourdomain.demo", "port": 6379} # Change host to your Redis server
+  redisConn: {"host":"redis.yourdomain.demo", "port": 6379, "db": 0} # Change host to your Redis server
   recapthchaSecurityKey: 12345678-1234-1234-1234-123456789ABC # Example key. You should replace with your own recaptcha key.
 
 config:
   portalUrl: "http://integrify.demo"
+  featureFlags:
+    - id: example-for-tests
+      active: true
+      description: > 
+            used in integration test - do not remove!
   consumersConn: data source=sql.yourdomain.demo;database=CONSUMERS_DATABASE_NAME;user id=DATABASE_USER_ID;password=DATABASE_USER_PASSWORD;
   logger:
     activeConfig: debug
@@ -70,15 +77,11 @@ config:
     options:
       useUnifiedTopology: true
       useNewUrlParser: true
-      useCreateIndex: true
-      poolSize: 10
       keepAlive: true
   client:
     endpointSecurityChecks: true
     max_sockets: 5000
-    port: 3508
     requestDetailCacheMinutes: 30
-    core_service_root: "http://integrify.demo/core-service"
   service:
     task_processor_interval: 1
     querygen_trace: "false"
@@ -117,11 +120,12 @@ ingress:
 
 # Services information
 auth:
-  name: api-auth
+  repoName: api-auth
+  name: auth
   minReplicas: 1
   maxReplicas: 3
   avgMemUtilization: 50
-  port: 3502
+  port: 3555
   restart: Always
   healthcheck: /api/auth/healthcheck
   resources:
@@ -138,7 +142,7 @@ client:
   minReplicas: 1
   maxReplicas: 3
   avgMemUtilization: 50
-  port: 3508
+  port: 3555
   restart: Always
   healthcheck: /healthcheck
   resources:
@@ -150,6 +154,7 @@ client:
       memory: "1Gi"
 
 configProcessor:
+  repoName: config-processor
   name: config-processor
   minReplicas: 1
   maxReplicas: 3
@@ -164,11 +169,12 @@ configProcessor:
       memory: "1Gi"
 
 coreService:
+  repoName: core-service
   name: core-service
   minReplicas: 1
   maxReplicas: 3
   avgMemUtilization: 50
-  port: 5000
+  port: 3555
   restart: Always
   healthcheck: /healthcheck
   env:
@@ -185,11 +191,12 @@ coreService:
       memory: "4Gi"
 
 dashboards:
-  name: api-dashboards
+  repoName: api-dashboards
+  name: dashboards
   minReplicas: 1
   maxReplicas: 3
   avgMemUtilization: 50
-  port: 3522
+  port: 3555
   restart: Always
   healthcheck: /api/dashboards/healthcheck
   resources:
@@ -201,11 +208,12 @@ dashboards:
       memory: "1Gi"
 
 files:
-  name: api-files
+  repoName: api-files
+  name: files
   minReplicas: 1
   maxReplicas: 3
   avgMemUtilization: 50
-  port: 3509
+  port: 3555
   volMountPath: /usr/src/app/files
   restart: Always
   volSize: 250M
@@ -224,11 +232,12 @@ files:
       memory: "1Gi"
 
 forms:
-  name: api-forms
+  repoName: api-forms
+  name: forms
   minReplicas: 1
   maxReplicas: 3
   avgMemUtilization: 50
-  port: 3524
+  port: 3555
   restart: Always
   healthcheck: /api/forms/healthcheck
   resources:
@@ -240,11 +249,12 @@ forms:
       memory: "1Gi"
 
 instance:
-  name: api-instance
+  repoName: api-instance
+  name: instance
   minReplicas: 1
   maxReplicas: 3
   avgMemUtilization: 50
-  port: 3518
+  port: 3555
   restart: Always
   healthcheck: /api/instance/healthcheck
   resources:
@@ -256,11 +266,12 @@ instance:
       memory: "1Gi"
 
 integrations:
-  name: api-integrations
+  repoName: api-integrations
+  name: integrations
   minReplicas: 1
   maxReplicas: 3
   avgMemUtilization: 50
-  port: 3526
+  port: 3555
   restart: Always
   healthcheck: /api/integrations/healthcheck
   resources:
@@ -272,11 +283,12 @@ integrations:
       memory: "1Gi"
 
 processes:
-  name: api-processes
+  repoName: api-processes
+  name: processes
   minReplicas: 1
   maxReplicas: 3
   avgMemUtilization: 50
-  port: 3525
+  port: 3555
   restart: Always
   healthcheck: /api/processes/healthcheck
   resources:
@@ -288,11 +300,12 @@ processes:
       memory: "1Gi"
 
 reports:
-  name: api-reports
+  repoName: api-reports
+  name: reports
   minReplicas: 1
   maxReplicas: 3
   avgMemUtilization: 50
-  port: 3523
+  port: 3555
   restart: Always
   healthcheck: /api/reports/healthcheck
   resources:
@@ -304,11 +317,12 @@ reports:
       memory: "1Gi"
 
 scheduler:
+  repoName: scheduler
   name: scheduler
   minReplicas: 1
   maxReplicas: 3
   avgMemUtilization: 50
-  port: 3504
+  port: 3555
   restart: Always
   healthcheck: /api/scheduler/healthcheck
   resources:
@@ -320,6 +334,7 @@ scheduler:
       memory: "1Gi"
 
 sessionProcessor:
+  repoName: session-processor
   name: session-processor
   minReplicas: 1
   maxReplicas: 3
@@ -334,11 +349,12 @@ sessionProcessor:
       memory: "1Gi"
 
 settings:
-  name: api-settings
+  repoName: api-settings
+  name: settings
   minReplicas: 1
   maxReplicas: 3
   avgMemUtilization: 50
-  port: 3503
+  port: 3555
   restart: Always
   healthcheck: /api/settings/healthcheck
   resources:
@@ -350,7 +366,8 @@ settings:
       memory: "1Gi"
 
 ssp:
-  name: single-spa-portal
+  repoName: single-spa-portal
+  name: portal
   minReplicas: 1
   maxReplicas: 3
   avgMemUtilization: 50
@@ -366,11 +383,12 @@ ssp:
       memory: "1Gi"
 
 taskDispatcher:
-  name: api-task-dispatcher
+  repoName: api-task-dispatcher
+  name: task-dispatcher
   minReplicas: 1
   maxReplicas: 3
   avgMemUtilization: 50
-  port: 3519
+  port: 3555
   restart: Always
   healthcheck: /api/task-dispatcher/healthcheck
   resources:
@@ -382,7 +400,8 @@ taskDispatcher:
       memory: "1Gi"
 
 taskProcessor:
-  name: core-service-tp
+  repoName: core-service-tp
+  name: task-processor
   minReplicas: 1
   maxReplicas: 3
   avgMemUtilization: 50
@@ -396,11 +415,12 @@ taskProcessor:
       memory: "1Gi"
 
 tenant:
-  name: api-tenant
+  repoName: api-tenant
+  name: tenant
   minReplicas: 1
   maxReplicas: 3
   avgMemUtilization: 50
-  port: 3505
+  port: 3555
   restart: Always
   healthcheck: /api/tenant/healthcheck
   resources:
@@ -412,11 +432,12 @@ tenant:
       memory: "1Gi"
 
 user:
-  name: api-user
+  repoName: api-user
+  name: user
   minReplicas: 1
   maxReplicas: 3
   avgMemUtilization: 50  
-  port: 3521
+  port: 3555
   restart: Always
   healthcheck: /api/user/healthcheck
   resources:
