--- a/values-minikube.yaml
+++ b/values-minikube.yaml
@@ -34,7 +34,7 @@ globalEnv:
 secrets:
   awsCreds: {"accessKeyId": "YOUR_ACCESS_KEY_ID", "secretAccessKey": "YOUR_SECRET_ACCESS_KEY", "region": "us-east-1"} # Example key. You should replace with your own AWS creds.
   integrifyEnvToken: 12345678-1234-1234-1234-123456789ABC # Example key. You should replace with your own ENV key.
-  redisConn: {"host":"host.minikube.internal", "port": 6379} # Change host to your Redis server
+  redisConn: {"host":"host.minikube.internal", "port": 6379, "db": 0} # Change host to your Redis server
   recapthchaSecurityKey: 12345678-1234-1234-1234-123456789ABC # Example key. You should replace with your own recaptcha key.
   
 config:
@@ -85,15 +85,11 @@ config:
     options:
       useUnifiedTopology: true
       useNewUrlParser: true
-      useCreateIndex: true
-      poolSize: 10
       keepAlive: true
   client:
     endpointSecurityChecks: true
     max_sockets: 5000
-    #port: 3508
     requestDetailCacheMinutes: 30
-    #core_service_root: "http://integrify.demo/core-service"
   service:
     task_processor_interval: 1
     querygen_trace: "false"
