update typos in values files and files location for minikube

--- a/values-eks.yaml
+++ b/values-eks.yaml
@@ -268,7 +268,7 @@ instance:
 
 integrations:
   repoName: api-integrations
-  anem: integrations
+  name: integrations
   minReplicas: 1
   maxReplicas: 3
   avgMemUtilization: 50
@@ -335,7 +335,7 @@ scheduler:
       memory: "1Gi"
 
 sessionProcessor:
-  repoName: session_processor
+  repoName: session-processor
   name: session-processor
   minReplicas: 1
   maxReplicas: 3
