--- a/charts/integrify/templates/integrify-ingress.yaml
+++ b/charts/integrify/templates/integrify-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: integrify-eks-ingress
+  name: integrify-ingress
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
