added document-engine as dependency

--- a/values.yaml
+++ b/values.yaml
@@ -202,6 +202,8 @@ docProc:
   restart: Always
   healthcheck: /healthcheck
   env:
+  - name: GDPICTURE_LICENSE_KEY
+    value: "909090909090909090909090909"
   - name: REQUEST_LOGGING
     value: "off"
   - name: ASPNETCORE_URLS
@@ -453,71 +455,72 @@ user:
       cpu: ".5"
       memory: "1Gi"
 
-pspdfkit:
-  license:
-    activationKey: "3-f8c802567de35736c5f6a103f9cce0a8"
-    externalSecret: 
-    #  name: secretName
-      key: 3-f8c802567de35736c5f6a103f9cce0a8
-  auth:
-    api:
-      createSecret: true
-      apiToken: secret
-    dashboard:
-      createSecret: true
-      username: admin
-      password: admin
-  log:
-    level: debug
-  trustedProxies: default
-  signingService:
-    enabled: true
-    url: http://signing-service:6000/sign
-    timeoutSeconds: 10
-  storage:
-    enableMigrationJobs: false
-    databaseEngine: postgresql
-    assetStorageBackend: built-in
-    enableAssetStorageFallback: false
-    postgres:
-      enabled: true
-      host: document-engine-postgresql
-      database: pspdfkit
-      createSecret: true
-      tls:
-        enabled: false
-      auth: 
+document-engine:
+  pspdfkit:
+    license:
+      activationKey: ""
+      externalSecret: 
+      #  name: secretName
+        key: DOCUMENT_ENGINE_ACTIVATION_KEY
+    auth:
+      api:
         createSecret: true
-        username: postgres
-        password: postgres
-        adminUsername: postgres
-        adminPassword: postgres
+        apiToken: secret
+      dashboard:
+        createSecret: true
+        username: admin
+        password: admin
+    log:
+      level: debug
+    trustedProxies: default
+    signingService:
+      enabled: true
+      url: http://signing-service:6000/sign
+      timeoutSeconds: 10
+    storage:
+      enableMigrationJobs: false
+      databaseEngine: postgresql
+      assetStorageBackend: built-in
+      enableAssetStorageFallback: false
+      postgres:
+        enabled: true
+        host: integrify-postgresql
+        database: pspdfkit
+        createSecret: true
+        tls:
+          enabled: false
+        auth: 
+          createSecret: true
+          username: postgres
+          password: postgres
+          adminUsername: postgres
+          adminPassword: postgres
 
-postgresql:
-  enabled: true
-  architecture: standalone
-  postgresqlDataDir: /ephemeral/data
-  primary:
-    extraVolumeMounts:
-      - mountPath: /ephemeral
-        name: ephemeral-data
-    extraVolumes:
-      - name: ephemeral-data
-        emptyDir:
-          sizeLimit: 1Gi
-    persistence:
+  postgresql:
+    enabled: true
+    architecture: standalone
+    postgresqlDataDir: /ephemeral/data
+    primary:
+      extraVolumeMounts:
+        - mountPath: /ephemeral
+          name: ephemeral-data
+      extraVolumes:
+        - name: ephemeral-data
+          emptyDir:
+            sizeLimit: 1Gi
+      persistence:
+        enabled: false
+      extendedConfiguration: |
+        log_statement = all
+      pgHbaConfiguration: |
+        host     all             all             0.0.0.0/0               md5
+        host     all             all             ::/0                    md5
+        local   all             all                                     trust
+    auth:
+      enablePostgresUser: true
+      postgresPassword: postgres
+      username: pspdfkit
+      password: pspdfkit
+      database: pspdfkit
+    tls:
       enabled: false
-    extendedConfiguration: |
-      log_statement = all
-    pgHbaConfiguration: |
-      host     all             all             0.0.0.0/0               md5
-      host     all             all             ::/0                    md5
-      local   all             all                                     trust
-  auth:
-    enablePostgresUser: true
-    postgresPassword: postgres
-    username: pspdfkit
-    password: pspdfkit
-    database: pspdfkit
-  tls:
-    enabled: false
