--- a/charts/integrify/Chart.yaml
+++ b/charts/integrify/Chart.yaml
@@ -23,3 +23,7 @@ version: 1.3.13
 # It is recommended to use it with quotes.
 appVersion: "24.01.25-1"
 
+dependencies:
+- name: document-engine
+  version: "^0.1.0"
+  repository: https://pspdfkit.github.io/helm-charts
