--- a/charts/integrify/templates/integrify-ingress.yaml
+++ b/charts/integrify/templates/integrify-ingress.yaml
@@ -192,6 +192,13 @@ spec:
                 name: {{ .Values.user.name }}
                 port:
                   number: {{ .Values.user.port }}
+          - path: /api/doc-proc
+            pathType: Prefix
+            backend:
+              service:
+                name: {{ .Values.docProc.name }}
+                port:
+                  number: {{ .Values.docProc.port }}
           - path: /
             pathType: Prefix
             backend:
