add ingress record for browse-house https://github.com/Integrify/version8/issues/2660

--- a/charts/integrify/templates/integrify-ingress.yaml
+++ b/charts/integrify/templates/integrify-ingress.yaml
@@ -199,6 +199,13 @@ spec:
                 name: {{ .Values.docProc.name }}
                 port:
                   number: {{ .Values.docProc.port }}
+          - path: /api/browse-house
+            pathType: Prefix
+            backend:
+              service:
+                name: {{ .Values.browseHouse.name }}
+                port:
+                  number: {{ .Values.browseHouse.port }}
           - path: /
             pathType: Prefix
             backend:
