env CREDENTIALS_SECRET
https://github.com/Integrify/version8/issues/2722

--- a/charts/integrify/templates/secrets.yaml
+++ b/charts/integrify/templates/secrets.yaml
@@ -7,4 +7,5 @@ data:
   REDIS_CONN: {{ .Values.secrets.redisConn | toJson | b64enc | quote }}
   INTEGRIFY_ENV_TOKEN: {{ .Values.secrets.integrifyEnvToken | b64enc }}
   RECAPTCHA_SECURITY_KEY: {{ .Values.secrets.recapthchaSecurityKey | b64enc }}
+  CREDENTIALS_SECRET: {{ .Values.secrets.credentialsSecret | b64enc }}
 type: opaque
