--- a/values-eks.yaml
+++ b/values-eks.yaml
@@ -22,6 +22,7 @@ secrets:
   integrifyEnvToken: 12345678-1234-1234-1234-123456789ABC # Example key. You should replace with your own ENV key.
   redisConn: {"host":"redis.yourdomain.demo", "port": 6379, "db": 0} # Change host to your Redis server
   recapthchaSecurityKey: 12345678-1234-1234-1234-123456789ABC # Example key. You should replace with your own recaptcha key.
+  credentialsSecret: 12345678-1234-1234-1234-123456789ABC # Example key. You should replace with your own password used to encrypt credentials.
 
 config:
   portalUrl: "https://www.yourdomain.demo"
