--- a/charts/integrify/Chart.yaml
+++ b/charts/integrify/Chart.yaml
@@ -25,6 +25,6 @@ appVersion: "24.09.18-1"
 
 dependencies:
   - name: document-engine
-    version: "3.2.1"
+    version: "^3.0.0"
     repository: "https://pspdfkit.github.io/helm-charts"
     condition: document-engine.enabled
