--- a/values.yaml
+++ b/values.yaml
@@ -93,6 +93,23 @@ auth:
       cpu: ".5"
       memory: "1Gi"
 
+browseHouse:
+  repoName: browse-house
+  name: browse-house
+  minReplicas: 1
+  maxReplicas: 3
+  avgMemUtilization: 80
+  port: 3555
+  restart: Always
+  healthcheck: /api/instance/healthcheck
+  resources:
+    requests:
+      cpu: ".25"
+      memory: "0.5Gi"
+    limits:
+      cpu: ".5"
+      memory: "1Gi"
+
 client:
   repoName: client
   name: workflow
