--- a/charts/integrify/Chart.yaml
+++ b/charts/integrify/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: integrify
-description: A Helm chart to deploy Integrify in a Kubernetes cluster
+name: nutrient-workflow-automation
+description: A Helm chart to deploy Nutrient Workflow Automation in a Kubernetes cluster
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,16 +15,16 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 1.5.6
+version: 2.0.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "8.8.3"
+appVersion: "8.9.0"
 
 dependencies:
   - name: document-engine
-    version: "^5.0.0"
+    version: "^6.0.0"
     repository: "https://pspdfkit.github.io/helm-charts"
     condition: document-engine.enabled
