--- a/charts/integrify/templates/secrets.yaml
+++ b/charts/integrify/templates/secrets.yaml
@@ -8,4 +8,5 @@ data:
   INTEGRIFY_ENV_TOKEN: {{ .Values.secrets.integrifyEnvToken | b64enc }}
   RECAPTCHA_SECURITY_KEY: {{ .Values.secrets.recapthchaSecurityKey | b64enc }}
   CREDENTIALS_SECRET: {{ .Values.secrets.credentialsSecret | b64enc }}
+  DOCUMENT_AUTHORING_LICENSES: {{ .Values.secrets.docAuthLicense | b64enc }}
 type: opaque
