update de to 1.12.2, add support for s3 like storage via files env vars
- Updated Document Engine version to 1.12.2 via helm-chart release 7.0.1
- Added support for two new variables (FILE_STORE_ENDPOINT and FORCE_FILE_STORE_PATH_STYLE) in the api-files service which will allow app to use S3 like storage services (MinIO) for attachments.
- Updated sample values.yaml with env vars above

--- a/values.yaml
+++ b/values.yaml
@@ -194,6 +194,11 @@ files:
   env:
   - name: FILE_STORE
     value: "/integrify/files"
+  # Use the below environment variables if connecting to an S3 compatible storage solution, ie MinIO
+  #- name: FILE_STORE_ENDPOINT
+  #  value: "http://host.minikube.internal:9000"
+  #- name: FORCE_FILE_STORE_PATH_STYLE
+  #  value: "true"
   resources:
     requests:
       cpu: ".25"
